[project]
name = "jukshio-api-hub"
version = "0.1.0"
description = "A centralized digital library for Jukshio Defraud, DKYC, and Verification APIs."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
  {name = "Ram Bikkina", email = "ramarao.bikkina@jukshio.com"}
]
dependencies = [
    "pandas>=2.3.3",
    "streamlit>=1.53.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]